--- a/css/style1.scss
+++ b/css/style1.scss
@@ -118,6 +118,7 @@ a:focus{
 	}
 	.office__pic_img{
 		max-width: 100%;
+		height: 250px;
 		object-fit: cover;
 		object-position: center;
 		// max-height: 250px;
@@ -132,7 +133,30 @@ a:focus{
 	flex-direction: column;
 	justify-content: flex-start;
 	align-items: flex-start;
-	.article__title{
+	.article__paragraph{
+		font-size: .9em;
+		color: $main-font-color;
+		font-family: $font-main;
+		margin-top: 2%;
+	}
+	.article__pictures{
+		display: flex;
+		justify-content: space-between;
+		align-items: stretch;
+		margin: 2% 0 1%;
+		&>*{
+			width: 47%
+		}
+		.pictures__img{
+			width: 100%;
+			object-fit: cover;
+			object-position: center;
+			max-height: 250px;
+			@extend .for_pic;
+		}
+	}
+}
+.article__title{
 	background: $active-element;
 	padding: 1% 2%;
 	font-family: $font-add;
@@ -159,29 +183,6 @@ a:focus{
 			align-self: flex-end;
 		}
 	}
-	.article__paragraph{
-		font-size: .9em;
-		color: $main-font-color;
-		font-family: $font-main;
-		margin-top: 2%;
-	}
-	.article__pictures{
-		display: flex;
-		justify-content: space-between;
-		align-items: stretch;
-		margin: 2% 0 4%;
-		&>*{
-			width: 47%
-		}
-		.pictures__img{
-			width: 100%;
-			object-fit: cover;
-			object-position: center;
-			max-height: 250px;
-			@extend .for_pic;
-		}
-	}
-}
 .content__our-team{
 	@extend .column;
 	line-height: 1.5;
@@ -282,10 +283,10 @@ a:focus{
 	.content__article{
 		.article__title{
 			background: $active-element;
-		padding: 1% 2%;
-		font-family: $font-add;
-		font-weight: 300;
-		font-style: normal;
+			padding: 1% 2%;
+			font-family: $font-add;
+			font-weight: 300;
+			font-style: normal;
 			.title__name_projects{
 				font-style: normal;
 				color: white;
@@ -322,19 +323,65 @@ a:focus{
 	.projects__title{
 		background: $active-element;
 		padding: 1% 2%;
-		font-family: $font-add;
-		font-weight: 300;
 		font-style: normal;
 	}
 	.title__name_projects{
 		font-style: normal;
 		color: white;
+		font-style: 2em;
+		font-family: $font-add;
+		font-weight: 300;
 	}
 	.title__name_projects:before{
 		content: none;
 	}
+	.article__paragraph{
+		font-family: $font-main;
+		font-size: .9em;
+		color: $main-font-color;
+		margin-top: 2%;
+	}
 }
 
+.projects__works{
+	.title__name{
+		font-style: normal;
+		color: white;
+		font-style: 2em;
+		font-family: $font-add;
+		font-weight: 300;
+	}
+	.article__title{
+		margin-top: 3%;
+	}
+}
+.works__examples{
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: nowrap;
+	align-items: stretch;
+	flex-wrap: wrap;
+	padding: 2% 0 4%;
+}
+.examples__item{
+	width: 17%;
+	.item__gallery{
+		width: 100%;
+		height: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-start;
+		align-items: flex-start;
+		text-decoration: none;
+		color: $main-font-color;
+		.gallery__pic{
+			width: 100%;
+			height: 150px;
+			object-fit: cover;
+			object-position: center;
+		}
+	}
+}
 @media only screen and (max-width: 48em){
 	.main__sidebar{
 		// order: -1;
@@ -376,8 +423,27 @@ a:focus{
 			}
 		}
 	}
+	.header__search{
+		padding: 0 2%;
+	}
 	.main__content{
 		padding-right: 0;
+	}
+	.project__pictures{
+		.project__pistures_block{
+			width: 100%;
+		}
+	}
+	.projects__technology{
+		.article__paragraph{
+			padding: 0 2%;
+		} 
+	}
+	.works__examples{
+		padding: 2% 2% 4%;
+	}
+	.examples__item{
+		width: 100%;
 	}
 }
 @media only screen and (min-width: 48em){
@@ -388,6 +454,9 @@ a:focus{
 		align-items: flex-start;
 		top: 0;
 		left: 0;
+	}
+	.header__search{
+		padding: 0;
 	}
 	.main__content{
 		padding-right: 0;
@@ -410,6 +479,26 @@ a:focus{
     	margin: 2.2% 0 2.2% 1%;
 		}
 	} 
+	.sidebar__dropdown {
+		.dropdown__item {
+			padding: 2% 1%;
+		}
+	}
+	.sidebar__menu{
+		margin-bottom: 2%;
+	}
+	.project__pictures{
+		.project__pistures_block{
+			width: 47%;
+		}
+	}
+	.works__examples{
+		padding: 2% 0 4%;
+		justify-content: space-around;
+	}
+	.examples__item{
+		width: 47%;
+	}
 }
 @media only screen and (min-width: 62em){
 	.sidebar__office{
@@ -417,6 +506,12 @@ a:focus{
 	}
 	.main__content{
 		padding-left: 2%;
+	}
+	.works__examples{
+		justify-content: space-between;
+	}
+	.examples__item{
+		width: 17%;
 	}
 }
 
